<resources>
    <string name="app_name">Honeybee</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="menu_homepage">Home</string>

    <string name="menu_orders">Orders</string>
    <string name="menu_promocode">PromoCode</string>
    <string name="Share">Share</string>
    <string name="contact__us">Contact Us</string>
    <string name="logout">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="Home">Home</string>
</resources>