<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"

            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_baseline_order"

            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_promocode"
            android:icon="@drawable/ic_menu_slideshow"

            android:title="@string/menu_promocode" />

    </group>



    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/Share"></item>

            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_live_help_black_24dp"
                android:title="@string/contact__us"></item>



            <item
                android:id="@+id/nav_Logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout"></item>
        </menu>
    </item>
</menu>